--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.7"
+  },
+  "engines": {
+    "node": "8.11.1"
   }
 }
