--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.7",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "true-log": "^1.0.0"
   },
   "engines": {
     "node": "8.11.1"
